# ci_test

./: Cargo.toml  Dockerfile  bake.hcl
.github/workflows/: docker.yaml  wf.yaml
migrations/: 20241002084511_create_table.sql
src/: handlers.rs  main.rs
